# cmd/api/routes.go
@@ -14,6 +14,7 @@ func (app *application) routes() http.Handler {
 	router.MethodNotAllowed = http.HandlerFunc(app.methodNotAllowedResponse)
 
 	router.HandlerFunc(http.MethodGet, "/healthz", app.healthcheck)
+	router.HandlerFunc(http.MethodGet, "/readyz", app.readiness(app.db, app.menuCache))
 	router.HandlerFunc(http.MethodGet, "/v1/restaurants", app.listRestaurants(app.models.Restaurants))
 	router.HandlerFunc(http.MethodGet, "/v1/restaurants/:id", app.showRestaurant(app.models.Restaurants))
 	router.HandlerFunc(http.MethodGet, "/v1/restaurants/:id/menu", app.listMenuItems(app.models.Restaurants, app.models.MenuItems, app.menuCache))
